--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- You may want to change the site title -->
-    <title>foobar</title>
+    <title>Nichard's Ye Olde Web Page</title>
   </head>
   <body>
-    <!-- put your content below -->
-    <h1>Hello World!</h1>
+    <header>
+      <h2><b>twitter</b></h2>
+      <h4><a href='#'>updates</a> | <a href='#'>archives</a> | <a href='#'>preferences</a> | <a href='#'>help</a> | <a href='#'>sign-out</a></h4>
+    </header>
+    <main>
+      <section>
+        <h2><b>what's your status?</b></h2>
+        <input></input>
+        <p><b>current status:</b> wondering when Mer is going to show up</p>
+        <button>update</button>
+      </section>
+      <section>
+        <h2>friend's status</h2>
+        <p><a href='#'>add more friends</a></p>
+        <ul>
+          <il><a href='#'>jack</a>: wondering when Mer is going to show up <small>5 minutes ago</small></il><br>
+          <il>⭐<a href='#'>Dom</a>: who's johnnny, he says <small>14 minutes ago</small></il><br>
+          <il>★<a href='#'>Tony Stark</a>: I love ice cream <small>19 minutes ago</small></il><br>
+          <il>⭐<a href='#'>Greta Garbo</a>: dogs are so cute!!! <small>27 minutes ago</small></il><br>
+          <il>⭐<a href='#'>Donald</a>: I want a dog so so SO much! <small>38 minutes ago</small></il><br>
+        </ul>
+      </section>
+      <section>
+        <h2>public status</h2>
+        <ul>
+          <il>💬 <a href='#'>jack</a> : wondering when Mer is going to show up</il>
+        </ul>
+        <p></p>
+      </section>
+      <section>
+        <h2>my stats</h2>
+        <ul>
+          <il><a href='#'>7 followers</a></il><br>
+          <il>392 pings today</il>
+        </ul>
+        <p></p>
+      </section>
+    </main>
   </body>
 </html>
