--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Nichard's Ye Olde Web Page</title>
+    <title>old twitter</title>
   </head>
   <body>
     <header>
